--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "scripts": {
-    "build": "eleventy --input=source",
+    "build": "eleventy --pathprefix=coreLabAssign_2",
     "serve": "eleventy --serve --input=source"
   },
   "dependencies": {
